--- a/README
+++ b/README
@@ -1,5 +1,10 @@
 The Connection Server
 
+© 2004,2005,2010 David J. Goehrig <dave@nexttolast.com>
+
+And is released under the GNU AFFERO GENERAL PUBLIC LICENSE.
+
+See the COPYING file for details.
 
 
 
